# os

./: README.md
autumn/pack1/1/: 1.1.c  1.2.c  1.3.c  1.4.c  1.5.c  CMakeLists.txt  addresses
autumn/pack1/2/: CMakeLists.txt  compile.bash  main.c  thread.c  thread.h
autumn/pack1/3/: CMakeLists.txt  main.c  uthread.c  uthread.h
autumn/pack2/1/sync/: CMakeLists.txt  doc.md  queue-threads.c  queue.c
autumn/pack2/1/sync/cond_val/: queue.c  queue.h
autumn/pack2/1/sync/mutex/: queue.c  queue.h
autumn/pack2/1/sync/sem/: queue.c  queue.h
autumn/pack2/1/sync/spinlock/: queue.c  queue.h
autumn/pack2/2/: CMakeLists.txt  doc.md  list.c  list.h  main.c
autumn/pack2/2/custom_mutex/: list.c  list.h  main.c  mutex.c  mutex.h
autumn/pack2/2/custom_spinlock/: list.c  list.h  main.c  spinlock.c  spinlock.h
autumn/pack2/2/mutex/: list.c  list.h  main.c
autumn/pack2/2/rwlock/: list.c  list.h  main.c
autumn/pack2/2/spinlock/: list.c  list.h  main.c
autumn/pack2/3/: CMakeLists.txt  main.c  mutex.c  mutex.h
autumn/project/: CMakeLists.txt  client.c  request.c  request.h  server.c
autumn/project/channel/: channel.c  channel.h
autumn/project/fast-api/: client.py  main.py
autumn/project/hashmap/: hashmap.c  hashmap.h  test.c
autumn/project/logger/: logger.c  logger.h
pack2/1/: kern.txt  res.txt  write.c  write_wrapper.c
pack2/2/: syscall_asm.c
pack2/3/: my_strace.c
pack3/: CMakeLists.txt  main.c
pack3/1/: main.c
pack3/2/: implementations.c  main.c
pack3/3/: main.c
pack4/1/: main.c
pack4/2/: 1.c  CMakeLists.txt
pack4/3/: CMakeLists.txt  custom_malloc.c  main.c
pack5/1/: main.c
pack5/2/: child_zombie.c  parent_zombie.c
pack6/1/: main.c
pack6/2/: main.c
pack6/3/: client.c  server.c
pack7/1/: CMakeLists.txt  client.c  server.c
pack7/2/: client.c  server.c
pack7/3/: CMakeLists.txt  server.c
spring/pack2/3/: CMakeLists.txt  syscallent.h
spring/pack3/2/: CMakeLists.txt  func_decl.h  func_types.h  main.c
(+12 files in other folders)
